--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
+    "@prisma/adapter-pg": "^7.1.0",
     "@prisma/client": "^7.1.0",
     "@radix-ui/react-avatar": "^1.1.11",
     "@radix-ui/react-dialog": "^1.1.15",
@@ -28,14 +29,18 @@
     "@tabler/icons-react": "^3.36.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.23.26",
     "lucide-react": "^0.561.0",
     "next": "16.0.10",
     "next-intl": "^4.6.1",
     "next-themes": "^0.4.6",
+    "prop-types": "^15.8.1",
     "react": "19.2.1",
     "react-dom": "19.2.1",
     "react-hook-form": "^7.68.0",
     "react-syntax-highlighter": "^16.1.0",
+    "react-vertical-timeline-component": "^3.5.3",
+    "simple-icons": "^16.2.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "tsx": "^4.21.0",
@@ -48,6 +53,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-vertical-timeline-component": "^3.3.6",
     "diff": "^8.0.2",
     "prisma": "^7.1.0",
     "tailwindcss": "^4",
