chore: added waitlist

--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "@types/react-vertical-timeline-component": "^3.3.6",
     "diff": "^8.0.2",
     "prisma": "^7.1.0",
