--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "next": "16.0.10",
     "next-intl": "^4.6.1",
     "next-themes": "^0.4.6",
+    "pino": "^10.1.0",
     "prop-types": "^15.8.1",
     "react": "19.2.1",
     "react-dom": "19.2.1",
